# SimpML

./: .flake8  .gitignore  LICENSE  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  run_tests.ipynb  setup.py
.github/actions/: build.yml
.github/workflows/: build.yml
docs/: build.bat  build.sh
docs/examples/: Introduction.ipynb  Monitoring.ipynb  QuickStart.ipynb  TabularLowLevel.ipynb  TabularUnsupervisedUseCases.ipynb  VisionUseCases.ipynb
docs/examples/datasets/binary/Titanic/: config.p
docs/examples/datasets/multiclass/Shelter Animal Outcomes/: config.p
docs/examples/datasets/regression/Rossmann/: config.p
docs/source/: conf.py  index.rst
scripts/: gen_reqs.bat  gen_reqs.sh  install_poetry.bat  install_poetry.sh
simpml/: __init__.py
simpml/common/: __init__.py  all.py  metrics_pool.py  models_pool.py
simpml/core/: __init__.py  base.py  data_set.py  experiment_manager.py  loggers_pool.py  trainers_pool.py
simpml/tabular/: __init__.py  adapters_pool.py  all.py  data_fetcher_pool.py  hyperparameters_optimizer.py  inference.py  interpreter.py  model.py  pipeline.py  shap_manager.py  splitter_pool.py  steps_pool.py  tabular_data_manager.py
simpml/utils/: MlFlow.py  __init__.py
simpml/vision/: __init__.py  all.py  base.py  data.py  model.py  splitter_pool.py  utils.py
tests/: conftest.py  test_adapters.py  test_autoML.py  test_base.py  test_cross_validation.py  test_data_fetcher.py  test_data_manager.py  test_data_splitter.py  test_experiment_manager.py  test_interpreter.py  test_optimizer.py  test_pickle.py  test_pipeline.py  test_steps.py  test_supervised.py  test_tabular_data_manager.py  test_time_series.py  test_unsupervised.py  test_vision.py
tests/data/: satellite.csv  train_titanic.csv
